--- a/FlexR_Module7.Rmd
+++ b/FlexR_Module7.Rmd
@@ -8,7 +8,8 @@ bibliography: BIOL3140.bib
 ## Introduction
 Muscle force is a result of two important factors, the length of contraction and the speed of contraction. The force-length relationship governs that muscles generate the most amount of force when at their resting length and generate the least amount of force when they are shortened or elongated from their ideal resting length. This is a result of the cross-bridge theory and where each individual sarcomere has a limited attachment zone between actin and myosin. When muscles have increased and decreased length from their resting position, the amount of actin and myosin overlap is less resulting in decreased productions of force @rassier1999length. This project seeks to answer whether this typical force-length relationship is observed both under control and when the muscle is fatigued. It also seeks to answer whether there is a shift in the angle of the elbow joint at which the maximum voluntary contraction occurs under control and fatigued conditions. Previous studies have shown that fatigued muscles favor longer lengths for force generation over control muscles. Data was collected and analyzed to further test and answer these questions @biewener2006tired.
 ## Methods
-
+To find the force-length relationship for both control and fatigued muscles, we first needed to discover how we will control the length of contractions for the arm muscles. To do this we constructed a goniometer out of cardboard to measure the angle of contractions (angle of the upper arm and forearm via the elbow joint). Larger angles would have a longer length and smaller angles would have a shorter length. We measured 11 angles from 157.5 degrees to 45 degrees in 11.25 degree increments. At each angle we would produce the maximum voluntary contraction for 30 seconds and measure the output using a 40 kilogram load cell with a HX711 amplifier and an Arduino microcontroller. For our fatigued data we would use a backpack filled with textbooks to eccentrically fatigue our forearm flexors. The bag was lowered using the study arm until it was fully extended in 3-4 second cycles and returned to the top using the non-study hand. These cycles were repeated for 4 minutes, and after a 2 minute break data was collected again using the same method as in the control data. 
+To analyze our data, we found the maximum voluntary contraction for all the angles of the experiments. This value is what we call Fmax. We then use this value to normalize all of our other values by dividing each maximum force for each angle by Fmax. We then plottted the control and fatigue data on the same graph show we could see the shift in Fmax as a result of fatiguing the forearm flexors. This shift was then calculated by subtracting the two angles. 
 ## Results
 
 ```{r setup, include=FALSE}
