--- a/BIOL3140.bib
+++ b/BIOL3140.bib
@@ -2,14 +2,14 @@
 title={Length dependence of active force production in skeletal muscle},
 author={Rassier, Macintosh, Herzog},
 journal={American Physiological Society},
-volume{86}
-number={5}
-pages={1445-1457}
-year={2008}
-publisher={American Physiological Society}
+volume={86},
+number={5},
+pages={1445-1457},
+year={2008},
+publisher={American Physiological Society},
 }
 
-@article{biewener2006tired
+@article{biewener2006tired,
 title={Tired or fatigue? Factors affecting the force-length relationship of muscle},
 author={Biewener, Ahn},
 journal={Journal of Applied Physiology},
