--- a/FlexR_Module7.Rmd
+++ b/FlexR_Module7.Rmd
@@ -24,7 +24,22 @@ library(ggplot2)
 library(knitr)
 library(dplyr)
 ```
-```{r}
+```{r, echo=FALSE}
+f <- list.files("new_data",pattern=".csv",full.names = TRUE)
+dat.l <- list() #empty list
+
+for(i in f){
+  met.dat<- unlist(strsplit(i,"_"))
+  group <- gsub("new_data/", " ", met.dat[1])
+  subject <- met.dat[2]
+  ang <- as.numeric(met.dat[3])
+  activity <- gsub(".csv","",met.dat[4])
+  
+  dat.l[[i]]<- read_delim(i, delim= " ", col_names = c("Reading","Force","Unit"))%>%
+    mutate(Group=group,Subject=subject, Angle=ang, Activity = activity)
+  
+}
+data <- do.call(rbind,dat.l)
 
 ```
 
