--- a/FlexR_Module7.Rmd
+++ b/FlexR_Module7.Rmd
@@ -24,19 +24,18 @@ library(ggplot2)
 library(knitr)
 library(dplyr)
 ```
+
 ```{r, echo=FALSE}
-getwd()
-f <- list.files(pattern = ".csv")
-#f <- list.files(pattern = ".csv", full.names=TRUE)
+f <- list.files("new_data2", pattern = ".csv", full.names=TRUE)
 dat.l <- list()
 
 for(i in f){
-met.dat<- unlist(strsplit(i,"_"))
-who <- met.dat[3]
-activity <- met.dat[4]
-ang <- gsub(".csv","", met.dat[5])
-dat.l[[i]]<- read_csv(i) %>%
-mutate(who = who, angle = ang, activity = activity)
+  met.dat<- unlist(strsplit(i,"_"))
+  who <- met.dat[3]
+  activity <- met.dat[4]
+  ang <- gsub(".csv","", met.dat[5])
+  dat.l[[i]]<- read_csv(i,show_col_types = FALSE) %>%
+  mutate(who = who, angle = ang, activity = activity)
 }
 
 dat <- do.call(rbind,dat.l)
@@ -54,6 +53,7 @@ dat_Fmax<-dat_recording_max%>%
 
 dat_Fmax_norm<-dat_recording_max%>%
     left_join(dat_Fmax)
+
 dat_Fmax_norm<-dat_Fmax_norm%>%
   group_by(angle,who,activity)%>%
   summarize(Fmax_norm=(recording_max/Fmax))%>%
@@ -71,10 +71,16 @@ dat_Fmax_norm_mean%>% #plot two, name later, mean normalized Fmax vs Angle
   ggplot(aes(x=angle,y=Fmax_norm_mean,col=activity))+geom_point()+labs(y="Mean Normalized Fmax", x="Angle")
 ```
 ```{r, echo= FALSE}
-poly.m2 <- lm(Fmax_norm~poly(angle,2),data=dat_Fmax_norm) 
-poly.m3 <- lm(Fmax_norm~poly(angle,3),data=dat_Fmax_norm) 
-poly.m4 <- lm(Fmax_norm~poly(angle,4),data=dat_Fmax_norm) 
+class(dat_Fmax_norm$angle)
+poly.m2 <- lm(Fmax_norm~poly(as.numeric(angle),2),data=dat_Fmax_norm) 
+poly.m3 <- lm(Fmax_norm~poly(as.numeric(angle),3),data=dat_Fmax_norm) 
+poly.m4 <- lm(Fmax_norm~poly(as.numeric(angle),4),data=dat_Fmax_norm) 
 AICc(poly.m2,poly.m3,poly.m4)
+x.pred <- seq(45,157.5,length.out = 1000)
+normF.pred <- predict(poly.m3,newdata = data.frame(angle=x.pred)) #predict the force using 1000 angles
+
+
+qplot(ang,dat_Fmax_norm_mean)+geom_point(aes(x=x.pred,y=normF.pred),col="red")+geom_point(aes(x=x.pred[which.max(normF.pred)],y=normF.pred[which.max(normF.pred)]),size=5,col="blue")
 ```
 
 ## Discussion
