Cant get anything to work starting at line 92

--- a/FlexR_Module7.Rmd
+++ b/FlexR_Module7.Rmd
@@ -76,11 +76,46 @@ poly.m2 <- lm(Fmax_norm~poly(as.numeric(angle),2),data=dat_Fmax_norm)
 poly.m3 <- lm(Fmax_norm~poly(as.numeric(angle),3),data=dat_Fmax_norm) 
 poly.m4 <- lm(Fmax_norm~poly(as.numeric(angle),4),data=dat_Fmax_norm) 
 AICc(poly.m2,poly.m3,poly.m4)
-x.pred <- seq(45,157.5,length.out = 1000)
-normF.pred <- predict(poly.m3,newdata = data.frame(angle=x.pred)) #predict the force using 1000 angles
+AICs <- dat_Fmax_norm%>%
+  group_by(who,activity)%>%
+  summarize(
+    m2=AICc(lm(Fmax_norm~poly(angle,2))), #second order
+    m3=AICc(lm(Fmax_norm~poly(angle,3))), #third order
+    m4=AICc(lm(Fmax_norm~poly(angle,4))) #fourth order
+  )%>%
+  pivot_longer(m2:m4,names_to="model",values_to="AICc")%>%
+  print()
 
+```{r, echo=FALSE}
+x.pred<-seq(45,157.5,length.out=1000)
 
-qplot(ang,dat_Fmax_norm_mean)+geom_point(aes(x=x.pred,y=normF.pred),col="red")+geom_point(aes(x=x.pred[which.max(normF.pred)],y=normF.pred[which.max(normF.pred)]),size=5,col="blue")
+fits <- dat_Fmax_norm%>%
+  group_by(who,activity)%>%
+  summarize(
+    m2=predict(lm(Fmax_norm~poly(angle,2)),newdata=data.frame(angle=x.pred)), #second order
+    m3=predict(lm(Fmax_norm~poly(angle,3)),newdata=data.frame(angle=x.pred)), #third order
+    m4=predict(lm(Fmax_norm~poly(angle,4)),newdata=data.frame(angle=x.pred)) #fourth order
+  )%>%
+  pivot_longer(m2:m4,names_to="model")%>%
+  group_by(who,activity,model)%>%
+  summarize(theta_max=x.pred[which.max(value)])%>%
+  print()
+
+best.models<-fits%>%
+  left_join(AICs)%>%
+  group_by(subject,experiment)%>%
+  mutate(best=AICc==min(AICc))%>%
+  filter(best==TRUE)%>%
+  select(-best)%>%
+  print()
+
+anova_thetamax<-anova(lm(theta_max~activity,best.models))
+
+theta_max<-best.models%>%
+  pivot_wider(id_cols=subject,names_from = experiment,values_from=theta_max)%>%
+  mutate(shift=fatigue-control)%>%
+  ungroup()%>%
+  summarize(mean.shift=mean(shift,na.rm=TRUE),se.shift=sd(shift,na.rm=TRUE)/sqrt(length(shift)))
 ```
 
 ## Discussion
