updated bib and article

--- a/BIOL3140.bib
+++ b/BIOL3140.bib
@@ -19,3 +19,14 @@ pages={5-6},
 year={2006},
 publisher={American Physiological Society},
 }
+
+@article{wan2017muscle,
+title={Muscle fatigue: general understanding and treatment},
+author{Wan, Qin, Wang, Sun, Liu},
+journal={Experimental & moleculat medicine},
+volume={49},
+number={10},
+pages={384},
+year={2017},
+publisher={Springer Nature}
+}
