fixed error in bib

--- a/BIOL3140.bib
+++ b/BIOL3140.bib
@@ -22,7 +22,7 @@ publisher={American Physiological Society},
 
 @article{wan2017muscle,
 title={Muscle fatigue: general understanding and treatment},
-author{Wan, Qin, Wang, Sun, Liu},
+author={Wan, Qin, Wang, Sun, Liu},
 journal={Experimental & moleculat medicine},
 volume={49},
 number={10},
